# loki

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
bench/: CMakeLists.txt  loki_b.cpp
cmake/: FindCURANDDX_SM.cmake  FindMathDX_SM.cmake
include/loki/: basic.hpp  brute.hpp  configs.hpp  ffa.hpp  fft.hpp  fft_utils.hpp  fold.hpp  loki.hpp  loki_types.hpp  score.hpp  scores.hpp  simulation.hpp  suggestions.hpp  thresholds.hpp
include/loki/algorithms/: ffa.hpp  ffa_complex.hpp  fold.hpp  plans.hpp  prune.hpp  regions.hpp
include/loki/common/: coord.hpp  plans.hpp  types.hpp
include/loki/core/: chebyshev.hpp  circular.hpp  dynamic.hpp  taylor.hpp  taylor_ffa.hpp
include/loki/detection/: scheme.hpp  score.hpp  thresholds.hpp
include/loki/pipelines/: ep_freq_sweep.hpp  ffa_freq_sweep.hpp  ffa_manager.hpp  ffa_pipeline.hpp
include/loki/search/: configs.hpp
include/loki/simulation/: simulation.hpp
include/loki/utils/: fft.hpp  suggestions.hpp  workspace.hpp  world_tree.hpp
lib/: CMakeLists.txt  basic.cpp  cands.cpp  chebyshev.cpp  chebyshev_cuda.cu  circular.cpp  circular_cuda.cu  configs.cpp  coord_cuda.cu  defaults.cpp  dynamic.cpp  dynamic_cuda.cu  ep_kernels_launcher.cu  ffa.cpp  ffa_complex.cpp  ffa_complex_cuda.cu  ffa_cuda.cu  ffa_freq_sweep.cpp  ffa_freq_sweep_cuda.cu  ffa_manager.cpp  ffa_manager_cuda.cu  ffa_pipeline.cpp  fft.cpp  fft_cuda.cu  fold.cpp  fold_cuda.cu  kernels.cpp  kernels_cuda.cu  loki.cpp  math.cpp  plans.cpp  plans_cuda.cu  progress.cpp  prune.cpp  prune_cuda.cu  psr_utils.cpp  regions.cpp  scheme.cpp  score.cpp  score_cuda.cu  (+14 more)
lib/loki/: cands.hpp  cartesian.hpp  cub_helpers.cuh  cuda_utils.cuh  defaults.hpp  ep_kernels_taylor.cuh  ep_kernels_utils.cuh  exceptions.hpp  kernel_utils.cuh  kernels.hpp  kernels_cuda.cuh  math.hpp  math_cuda.cuh  plans_cuda.cuh  progress.hpp  psr_utils.hpp  scheme.hpp  timing.hpp  transforms.hpp  utils.hpp  world_tree.cuh
notebooks/: ffa_accel.ipynb  ffa_freq.ipynb  ffa_jerk.ipynb  ffa_period.ipynb  loki_ep_accel.ipynb  loki_ep_accel_cheby.ipynb  loki_ep_circular.ipynb  loki_ep_jerk.ipynb  loki_ffa_accel.ipynb  loki_ffa_freq.ipynb  loki_ffa_jerk.ipynb  optimal_thresholds.ipynb  optimal_thresholds_circular.ipynb  pruning_accel.ipynb  pruning_circular.ipynb  pruning_jerk.ipynb
src/: CMakeLists.txt  loki_python.cpp  loki_python_cuda.cpp  loki_templates.hpp  loki_templates_cuda.cuh  pybind_utils.hpp
src/loki/: __init__.py  search.py  sim_ffa.py
tests/cpp/: CMakeLists.txt  loki_t.cpp  maths_t.cpp  scores_t.cpp  thresholds_t.cpp  utils_t.cpp
tests/python/: conftest.py  test_cpu_match.py  test_cuda_match.py  test_output_match.py
