[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "loki"
version = "0.0.1"
description = "Leverage Optimal significance to unveil Keplerian orbIt pulsars"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pravir Kumar", email = "pravirka@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy", "pyloki @ git+https://github.com/pravirkr/pyloki.git"]

[project.urls]
Github = "https://github.com/pravirkr/loki"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-benchmark",
    "mypy",
]
docs = ["sphinx", "sphinx-book-theme", "sphinx-click", "myst-nb", "breathe"]
develop = ["ruff"]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
install.strip = false

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"
BUILD_DOCS = "OFF"
CMAKE_BUILD_PARALLEL_LEVEL = "4"

[tool.cibuildwheel]
test-extras = "test"
test-command = "python -m pytest {project}/tests/python -v"
test-skip = "pp* *-musllinux* *-manylinux_i686"

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "notebooks/**/*.ipynb",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "ANN003",
    "PLR2004",
    "G004",
    "E712",
    "FBT001",
    "FBT002",
    "TD",
    "FIX",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 20
max-statements = 100
max-branches = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-first-party = ["loki", "pyloki"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = "tests/python"

[tool.coverage.run]
omit = ["tests/*", "*__init__.py", "docs/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
#fail_under = 85
exclude_lines = ['raise AssertionError', 'raise NotImplementedError']

[tool.coverage.path]
source = "src/dmt"

[tool.gcovr]
filter = ["lib/*"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
index-out-of-bounds = "ignore"
unresolved-import = "ignore"
not-iterable = "ignore"        # For Numba prange
