CPMAddPackage(
  NAME benchmark
  VERSION 1.9.2
  GITHUB_REPOSITORY google/benchmark
  OPTIONS "BENCHMARK_ENABLE_WERROR OFF" "BENCHMARK_FORCE_WERROR OFF" "BENCHMARK_ENABLE_TESTING OFF"
)

set(LOKI_BENCH_TARGET ${PROJECT_NAME}_benchmarks)
file(GLOB LOKI_BENCH_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(${LOKI_BENCH_TARGET} ${LOKI_BENCH_SOURCES})
target_include_directories(
  ${LOKI_BENCH_TARGET} PRIVATE ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/lib
)
target_link_libraries(
  ${LOKI_BENCH_TARGET} PRIVATE ${LOKI_LIBRARY_NAME} ${LOKI_COMPILE_OPTIONS}
                               benchmark::benchmark_main
)
